<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_text">Hello World!</string>
    <string name="button_name">I\'m a Button</string>
    <string name="title">Look at my GUI:</string>
    <string name="click_btn">Click Here</string>
    <string name="check_box">Check this out!</string>
    <string name="swith">Switch on/off</string>
    <string name="type_hint">Type here</string>
    <string name="toast_msg">Here is more information</string>
    <string name="snack_msg">Snack bar showing</string>
    <string name="snack_action_msg">Switch the box</string>
    <string name="email_title_hint">Enter your email address:</string>
    <string name="email_input_hint">Type email here</string>
    <string name="password_title_hint">Type your password:</string>
    <string name="profile_title">Your profile</string>
    <string name="name_title">Your name:</string>
    <string name="name_input_hint">Enter your name</string>
    <string name="email_title">Your email:</string>
    <string name="picture_tile">Your picture</string>
    <string name="take_pic_title">Click the butto above to take a picture</string>
    <string name="login_btn">LOGIN</string>
    <string name="send_btn_text">send</string>
    <string name="receive_btn_text">receive</string>
    <string name="edit_text_hint">Type here</string>
    <string name="go_to_chat_btn">GoToChat</string>
    <string name="go_to_weather_btn">GoToWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>