<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_title" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_input_hint"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_title" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picture_tile" />

        <ImageButton
            android:id="@+id/takePictureBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/flag" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_pic_title" />

        <Button
            android:id="@+id/go_to_chat_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_chat_btn" />


        <Button
            android:id="@+id/go_to_weather_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_to_weather_btn" />

    </LinearLayout>
</ScrollView>

