<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/title"/>

    <Button
        android:id="@+id/button"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/click_btn"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/button"
        android:layout_weight="1"
        android:checked="false"
        android:text="@string/check_box" />



    <ImageButton
        android:id="@+id/imageButton"
        android:layout_below="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:background="@drawable/flag"
        />


    <Switch
        android:id="@+id/theSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_weight="1"
        android:text="@string/swith" />

    <EditText
        android:id="@+id/editText"
        android:layout_below="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_hint"
        android:inputType="textPersonName"/>
</RelativeLayout>